--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,15 +1,31 @@
 
 .footer {
-  background-color: var(--background-hero);
+  display: flex;
+  align-items: flex-start;
   padding-top: 60px;
   padding-bottom: 60px;
-
+  background-color: var(--background-hero);
+  
   @media screen and (min-width: 768px) {
     display: flex;
     align-items: flex-start;
   }
 }
 
+.footer-block {
+  align-items: baseline;
+  
+  @media screen and (min-width: 768px) {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: baseline;
+  }
+
+  @media screen and (min-width: 1200px) {
+   display: flex;
+  }
+}
 
 
 .footer-flex {
@@ -30,34 +46,39 @@
 }
 
 
-  .footer-block {
-    // align-items: baseline;
-    text-align: center;
-    align-items: baseline;
+  .footer-right-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: auto;
+    color: rgb(255, 255, 255);
 
     @media screen and (min-width: 768px) {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: baseline;
-
+      margin-left: 0;
     }
 
     @media screen and (min-width: 1200px) {
-     display: flex;
-     text-align: left;
+      align-items: start;
+      margin-left: auto;
     }
   }
+
  
 .address {
-    // margin-bottom: 60px;
+    text-align: center;
+    margin-bottom: 60px;
     font-style: normal;
     // width: 231px;
     // height: 81px;
     // margin-right: 70px;
 
     @media screen and (min-width: 768px) {
-      margin-right: 177px;
+      text-align: left;
+    }
+
+    @media screen and (min-width: 1200px) {
+      text-align: left;
+      margin-bottom: 0px;
     }
   }
 
@@ -87,20 +108,6 @@
     color: var(--white-color);
   }
   
-
-  .footer-right-block {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: auto;
-    color: rgb(255, 255, 255);
-
-    @media screen and (min-width: 768px) {
-      align-items: center;
-      margin-left: 0;
-    }
-  }
-
   .footer-cta {
     display: block;
     text-transform: uppercase;
@@ -131,6 +138,10 @@
 
   .footer-tel {
     margin-bottom: 60px;
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 0px;
+    }
 
     @media screen and (min-width: 1200px) {
       margin-bottom: 0px;
@@ -165,7 +176,24 @@
       text-align: left;
     }
   }
-  
+
+  .footer-icon {
+    fill: #F5F4FA;
+
+    @media screen and (min-width: 768px) {
+      margin-left: 165px;
+  }
+
+    @media screen and (min-width: 1200px) {
+    margin-left: 70px;
+}
+  }
+
+  .footer-icons {
+    fill: #F5F4FA;
+  }
+
+
   .socials {
     display: flex;
     justify-content: center;
@@ -205,10 +233,3 @@
     background-color: var(--accent-color);
   }
   
-  .footer-icon {
-    fill: #F5F4FA;
-
-    @media screen and (min-width: 1200px) {
-     
-    }
-  }
