--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -61,6 +61,11 @@
     width: 450px;
     margin-bottom: 20px;
 }
+
+    @media screen and (min-width: 1200px) {
+     margin-bottom: 0px;
+     width: 358px;
+}
    }
 
   
