--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -86,16 +86,16 @@
   
 
   .header-item + .header-item {
-    margin-left: 50px;
+    // margin-left: 50px;
     // margin-top: 10px;
 
     @media screen and (min-width: 768px) {
-      // margin-left: auto;
-      // margin-top: 10px;
+      margin-top: 10px;
   }
 
   @media screen and (min-width: 1200px) {
-   
+    margin-top: 0px;
+    margin-left: 50px;
 }
   }
   
@@ -125,24 +125,32 @@
   }
   
   .link.current::after {
-    position: absolute;
+    // position: absolute;
+    // content: "";
+    // display: block;
+    // width: 100%;
+    // height: 4px;
+    // background-color: var(--accent-color);
+    // border-radius: 2px;
+    // left: 0;
+    // bottom: -28px;
+
     content: "";
-    display: block;
     width: 100%;
     height: 4px;
-    background-color: var(--accent-color);
-    border-radius: 2px;
+    position: absolute;
+    background-color: #2196f3;
     left: 0;
-    bottom: -28px;
+    bottom: -29px;
 
-    @media screen and (min-width: 768px) {
-      bottom: -25px;
-  }
+  //   @media screen and (min-width: 768px) {
+  //     bottom: -25px;
+  // }
 
-  @media screen and (min-width: 1200px) {
-    bottom: -28px;
+  // @media screen and (min-width: 1200px) {
+  //   bottom: -28px;
    
-  }
+  // }
   }
   
   .nav-current {
